[Hot Fix] [Full Site] Corrected menu hrefs to index

--- a/case-study.html
+++ b/case-study.html
@@ -225,7 +225,7 @@
                     <span></span>
                     <span></span>
                     <div class="menu">
-                        <li><a href="about">About</a></li> 
+                        <li><a href="index">About</a></li> 
                         <li><a href="contact">Contact</a></li>
                         <li class="textMenuCurrentPage">Case Study &larr;</li>
                     </div>
@@ -234,7 +234,7 @@
             <div class="text-navWrapper">
                 <div class="text-nav">
                     <div class="textMenu">
-                        <li><a href="about">About</a></li>
+                        <li><a href="index">About</a></li>
                         <li><a href="contact">Contact</a></li>
                         <li class="textMenuCurrentPage">Case Study</li>
                     </div>
