--- a/contact.html
+++ b/contact.html
@@ -225,7 +225,7 @@
                     <span></span>
                     <span></span>
                     <div class="menu">
-                        <li><a href="about">About</a></li> 
+                        <li><a href="index">About</a></li> 
                         <li class="textMenuCurrentPage">Contact &larr;</li>
                         <li><a href="case-study">Case Study</a></li>
                     </div>
@@ -234,7 +234,7 @@
             <div class="text-navWrapper">
                 <div class="text-nav">
                     <div class="textMenu">
-                        <li><a href="about">About</a></li>
+                        <li><a href="index">About</a></li>
                         <li class="textMenuCurrentPage">Contact</li>
                         <li><a href="case-study">Case Study</a></li>
                     </div>
