[Contact Page] Updated Contact Copy
With google.domains new free offering of email aliases, at this time, it's more efficient to drop the contact form entirely

--- a/contact.html
+++ b/contact.html
@@ -248,7 +248,7 @@
         <div class="gridHeader"></div>
         <div class="gridBody">
             <h1 id="1goal">Get in touch</h1>
-            <p>I’ve decided to make some improvements so <b>my contact form is down for maintenance</b>. In the meantime, feel free to reach out on the social media platform of your choice - <i>or check back soon</i> if email me directly at: <a class="bodyLink" href="mailto:getintouch@bymichaelmarshall.com" target="_blank">getintouch@bymichaelmarshall.com</a></p>
+            <p>If you've got a project in mind, or just fancy a chat, feel free to reach out on the social media platform of your choice - or email me directly at: <a class="bodyLink" href="mailto:getintouch@bymichaelmarshall.com" target="_blank">getintouch@bymichaelmarshall.com</a></p>
             <a href="https://www.instagram.com/bymichaelsmarshall/">
                 <div class="socialIconContainer">
                     <svg class="socialIcon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
