[Hot Fix] Typo in 'key benchmarks' section

--- a/case-study.html
+++ b/case-study.html
@@ -307,7 +307,7 @@
             <p><span id="foundationsTag"><b>Foundations:</b></span> content, design, and development.<br>
             <b><span id="pillarsTag">Pillars:</b></span> technology, user experience (UX), and the product’s inherent value.<br>
             <b><span id="ornamentsTag">Ornamentation:</b></span> aesthetics, branding, and peripheral features.</p>
-            <p><b>Key Benchmarks</b> Key Benchmarks: exceed the standard of product quality and functionality, build for versatility and ease of revision, and reduce technical debt, complexity, and maintenance costs.</p>
+            <p><b>Key Benchmarks:</b> exceed the standard of product quality and functionality, build for versatility and ease of revision, and reduce technical debt, complexity, and maintenance costs.</p>
         </div>
         <div class="gridMargin"></div>
         <div class="gridHeader"></div>
