[About Page] Removed 'Product' from bio
Specialization could be misleading given the industry definitions

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
         <div class="gridBody">
             <h1 class="paddingDeficit">Who?</h1>
-            <p>Hi. I’m Mike. I’m a product designer based in Canada.</p>
+            <p>Hi. I’m Mike. I’m a designer based in Canada.</p>
 
             <p>I specialize in media and publishing, online and in print, but if you like what you see—whatever your area or project—<a class="bodyLink" href="contact">consider saying hi back &rarr;</a></p>
         </div>
