[Case Study Page] Added missing text
Added missing introduction to the page and disclaimer text to the get in touch link at article base

--- a/case-study.html
+++ b/case-study.html
@@ -256,6 +256,13 @@
             </div>
         </div>
         <div class="gridBody">
+            <h1 id="1goal">From abstract to concrete</h1>
+            <h2>A UX/UI Case</h2>
+            <p>Here I’ll use a classic example to show my product design process and what I can do for you. I’ve chosen a newsletter signup page for this because they are straightforward at their most basic and almost everyone has signed up for and received a newsletter in their time as an internet user.</p>
+        </div>
+        <div class="gridMargin"></div>
+        <div class="gridHeader"></div>
+        <div class="gridBody">
             <h1 id="1goal">1. What are we trying to achieve and why?</h1>
             <h2>Questions, questions</h2>
             <p>Products can often get bogged down in what could be. I like to start with why.</p>
@@ -406,7 +413,7 @@
         <div class="gridHeader"></div>
         <div class="gridBody">
                 <hr class="divider" style="width=100%">
-                <p><i>I’ve touched lightly on the subject of signup forms here; to chat more about the unique UX complexities of digital forms, <a class="bodyLink" href="contact">get in touch →</a></i></p>
+                <p><i>I’ve touched lightly on the subject of signup forms here. Bigger digital products can involve competitive analysis, user interviews, MVAs and MVPs, empathy, journey, and site maps, tasks flows, and fresh branding; to chat more about the unique UX complexities of digital forms (or otherwise), <a class="bodyLink" href="contact">get in touch →</a></i></p>
             </div>
         </div>
         <div class="gridMargin"></div>
