[About Page] Added title justification to page
Added title justification to the page to explain my design approach. Added 'Issuu' to familiar web platforms. Corrected title in 'Who?' paragraph.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
         <div class="gridBody">
             <h1 class="paddingDeficit">Who?</h1>
-            <p>Hi. I’m Mike. I’m a designer based in Canada.</p>
+            <p>Hi. I'm Mike. I'm a product designer based in Canada.</p>
 
             <p>I specialize in media and publishing, online and in print, but if you like what you see—whatever your area or project—<a class="bodyLink" href="contact">consider saying hi back &rarr;</a></p>
         </div>
@@ -170,6 +170,7 @@
                         <p>Formstack</p>
                         <p>GitHub</p>
                         <p>Google Suite</p>
+                        <p>Issuu</p>
                         <p>Jira</p>
                         <p>Katalon Suite</p>
                         <p>Litmus</p>
@@ -232,6 +233,14 @@
                 <p>Where Canada</p>
                 <p>XMJ Productions</p>
             </div>
+        </div>
+        <div class="gridMargin"></div>
+        <div class="gridHeader">
+        </div>
+        <div class="gridBody">
+            <h1>Why 'Product Designer'?</h1>
+            <p>If you're familiar with the industry you might be wondering why I'm talking about being a 'Product Designer' when I work on layouts and print media too.</p>
+            <p>In my experience the modern product design process is an excellent system even outside of digital products - it just needs to be flexible. Advertising goes beyond a single ad campaign, magazines go beyond a single issue, and media goes beyond digital and analogue; your story transcends its format so why shouldn't your process too?</p>
         </div>
         <div class="gridMargin"></div>
         <div class="">
