[Case Study Page] Adjusted shadow overflow and scrollbar
Mobile case study was having it's drop shadow cut off. Scrollbar received basic styling to match rest of site.

--- a/case-study.html
+++ b/case-study.html
@@ -64,6 +64,9 @@
                 max-width: 600;
                 overflow: auto;
                 margin: 1.8em 0em 1.8em 0em;
+                border: solid 8px #000000;
+                border-radius: 8px;
+                box-shadow: 8px 10px 6px #00000060;
             }
 
         .desktopWireframe {
@@ -75,6 +78,10 @@
                 max-height: 676;
                 max-width: 370;
                 overflow: auto;
+                margin: 1.8em 0em 1.8em 0em;
+                border: solid 8px #000000;
+                border-radius: 8px;
+                box-shadow: 8px 10px 6px #00000060;
             }
 
         .mobileWireframe {
@@ -94,6 +101,7 @@
             /* add back negative margin value */
                 padding: 0rem;
                 background: transparent;
+                overflow: visible;
                 }
             
             .mobileViewbox {
