[Case Study] Stylization correction in body text

--- a/case-study.html
+++ b/case-study.html
@@ -375,7 +375,7 @@
                 <div class="desktopViewbox">    
                     <img src="assets/mockMacDesktop.jpg" class="desktopWireframe"/>
                 </div>
-                <p>The mock includes all the basic design ingredients, i.e. assets, copy, brand colours, and brand typography. It also emphasizes the wireframe’s structure with strong visual hierarchy, neutral backgrounds, and contrast between elements. Extraneous cognitive load is reduced by simplifying graphic elements and making intentional use of colour that draws the reader to the most important aspects of the page. Elements, such as the ‘Newsletter Content’ articles, also match styles seen elsewhere on Maclean’s site making use of the reader’s familiarity with the brand; this capitalizes on the trust that is already associated with Maclean’s brand identity.</p>
+                <p>The mock includes all the basic design ingredients, i.e. assets, copy, brand colours, and brand typography. It also emphasizes the wireframe’s structure with strong visual hierarchy, neutral backgrounds, and contrast between elements. Extraneous cognitive load is reduced by simplifying graphic elements and making intentional use of colour that draws the reader to the most important aspects of the page. Elements, such as the ‘Newsletter Content’ articles, also match styles seen elsewhere on Maclean’s site making use of the reader’s familiarity with the brand; this capitalizes on the trust that is already associated with the <i>Maclean’s</i> brand identity.</p>
                 <p>Among other technical information, the mocks also account for legal text and requirements, anti-spam measures, and accessibility standards; take for example, the mock’s colours and the signup form fields. The mock contains colour codes that have verified contrast ratios so that any text on the page is legible to partially sighted individuals. The signup form only asks for essential information which reduces Maclean’s legal liability in the event of a data leak or the workload in the event of a privacy request.</p>
             </div>
         </div>
@@ -412,7 +412,7 @@
         <div class="gridBody">
             <div class="uxCaseBlock">
                 <h2>UX Case:</h2>
-                <p><b><i>From data to analytics to insights, Maclean’s web team discovers:</i></b></p>
+                <p><b><i>From data to analytics to insights,</i> Maclean’s <i>web team discovers:</i></b></p>
                 <p>The signup form at the bottom of the page is getting more conversions than the one at the top. Analytics provides the insight that this is because the value and trust statements within the page are successful. Is there a way these statements can be communicated to readers elsewhere on the site and garner more signups on the initial form?</p>
                 <p>Due to the volume of site visitors the reCAPTCHA anti-spam measure in the signup form is glitching for some readers, as reCAPTCHA is a third-party service it’s a difficult error to address. It isn’t a great user experience and one of our UAT testers has pointed out that reCAPTCHA isn’t as accessibility friendly as it could be. Is there another anti-spam system, such as the honeypot method, that would work better?</p>
             </div>
