[Case Study Page] Sticky Nav fix
Sticky position fails when overflow-x: hidden exists on parent nav - media query included on desktop to remedy this

--- a/case-study.html
+++ b/case-study.html
@@ -87,6 +87,10 @@
                 max-width: 100%;
             }
 
+            .sideNavSticky {
+                min-width: 250px;
+            }
+
         /*/Full-width Row Background Close*/
         @media only screen and (min-width:760px) {
             .gridHeader-sideNav {
@@ -108,7 +112,7 @@
                     max-width: 320;
                 }
         }
-        @media only screen and (min-width:1110px) {
+        @media only screen and (min-width:1020px) {
             .sideNavSticky {
                 position: sticky;
                 top: 5px;
