[Case Study Page] Added viewbox-scroll styling
With changes to parent CSS viewbox scroll styling had to be preserved by updating the header CSS.

--- a/case-study.html
+++ b/case-study.html
@@ -68,6 +68,10 @@
                 border-radius: 8px;
                 box-shadow: 8px 10px 6px #00000060;
             }
+        
+        .desktopViewbox::-webkit-scrollbar-track {
+                background: #000000;
+            }
 
         .desktopWireframe {
                 max-width: 100%;
@@ -81,6 +85,10 @@
                 border: solid 8px #000000;
                 border-radius: 8px;
                 box-shadow: 8px 10px 6px #00000060;
+            }
+
+        .mobileViewbox::-webkit-scrollbar-track {
+                background: #000000;
             }
 
         .mobileWireframe {
