[Full Site] My Work menu update
Menus updated site wide for access to the new page

--- a/contact.html
+++ b/contact.html
@@ -228,6 +228,7 @@
                         <li><a href="index">About</a></li> 
                         <li class="textMenuCurrentPage">Contact &larr;</li>
                         <li><a href="case-study">Case Study</a></li>
+                        <li><a href="my-work">My Work</a></li>
                     </div>
                 </div>
             </div>
@@ -237,6 +238,7 @@
                         <li><a href="index">About</a></li>
                         <li class="textMenuCurrentPage">Contact</li>
                         <li><a href="case-study">Case Study</a></li>
+                        <li><a href="my-work">My Work</a></li>
                     </div>
                 </div>
             </div>
