--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                         <li class="textMenuCurrentPage">About &larr;</li>
                         <li><a href="contact">Contact</a></li>
                         <li><a href="case-study">Case Study</a></li>
+                        <li><a href="my-work">My Work</a></li>
                     </div>
                 </div>
             </div>
@@ -90,6 +91,7 @@
                         <li class="textMenuCurrentPage">About</li>
                         <li><a href="contact">Contact</a></li>
                         <li><a href="case-study">Case Study</a></li>
+                        <li><a href="my-work">My Work</a></li>
                     </div>
                 </div>
             </div>
