--- a/case-study.html
+++ b/case-study.html
@@ -247,6 +247,7 @@
                         <li><a href="index">About</a></li> 
                         <li><a href="contact">Contact</a></li>
                         <li class="textMenuCurrentPage">Case Study &larr;</li>
+                        <li><a href="my-work">My Work</a></li>
                     </div>
                 </div>
             </div>
@@ -256,6 +257,7 @@
                         <li><a href="index">About</a></li>
                         <li><a href="contact">Contact</a></li>
                         <li class="textMenuCurrentPage">Case Study</li>
+                        <li><a href="my-work">My Work</a></li>
                     </div>
                 </div>
             </div>
