[My Work] Copy update
Moved copy toward more publishing oriented language as book design portfolio develops.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
         <div class="gridBody">
             <h1 class="paddingDeficit">Who?</h1>
-            <p>Hi. I'm Mike. I'm a product designer based in Canada.</p>
+            <p>Hi. I'm Mike. I'm a designer based in Canada.</p>
 
             <p>I specialize in media and publishing, online and in print, but if you like what you see—whatever your area or project—<a class="bodyLink" href="contact">consider saying hi back &rarr;</a></p>
         </div>
@@ -122,7 +122,7 @@
             <p>&ldquo;Mike was a well respected and beloved member of our team. He is a strong communicator and works well with cross-functional teams. He is able to explain technical things in simple terms, is calm under pressure and always quick to find creative solutions to challenges. I loved working with Mike and would highly recommend him.&rdquo;<br><i><span style="padding-inline-start: 2em;">- Amy Gibson, Digital Product Director, SJC.</span></i></p>
             <h2>Hard numbers</h2>
             <p><b>3 years</b> at one of Canada’s largest privately owned communications companies, St. Joseph Communications, working on web products for 13 award-winning media brands.</p>
-            <p><b>6 years</b> of product design experience in print media designing covers, posters, layouts, and promotional materials.</p>
+            <p><b>6 years</b> of product design experience in print media designing books, covers, posters, layouts, and promotional materials.</p>
             <p><b>10 years</b> in creative industries, making things independently and in collaboration.</p>
             <h2>Me, myself, and you</h2>
             <p>It's my privilege to bring quality and expertise to the products I work on but, in my opinion, the most valuable experience I have is as an advocate and mediator. Whether I’m working with a whole department, a small team, or just you, connection is the basis of everything we make.</p>
@@ -163,6 +163,7 @@
                     <button class="accordion">Web Apps & Services <span class="dropdownArrow"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 15"><path d="M6.76,3.071a2,2,0,0,1,3.48,0l5.068,8.943A2,2,0,0,1,13.568,15H3.432a2,2,0,0,1-1.74-2.986Z" transform="translate(17 15) rotate()" fill="#b5dfe0"/></svg></span></button>
                     <div class="panel">
                         <p>ADP</p>
+                        <p>Amazon KDP</p>
                         <p>Asana</p>
                         <p>Campaign Monitor</p>
                         <p>Ceros</p>
@@ -172,6 +173,7 @@
                         <p>Formstack</p>
                         <p>GitHub</p>
                         <p>Google Suite</p>
+                        <p>IngramSpark</p>
                         <p>Issuu</p>
                         <p>Jira</p>
                         <p>Katalon Suite</p>
@@ -220,6 +222,7 @@
                 <p>Ibbotson Memorial Field Trust</p>
                 <p>Lagrange Consulting</p>
                 <p>Maclean's</p>
+                <p>Milton Keynes Literary Festival</p>
                 <p>Pink Distortion Music</p>
                 <p>Quill & Quire</p>
                 <p>Raconteur Literary Magazine</p>
@@ -240,9 +243,9 @@
         <div class="gridHeader">
         </div>
         <div class="gridBody">
-            <h1>Why 'Product Designer'?</h1>
-            <p>If you're familiar with the industry you might be wondering why I'm talking about being a 'Product Designer' when I work on layouts and print media too.</p>
-            <p>In my experience the modern product design process is an excellent system even outside of digital products - it just needs to be flexible. Advertising goes beyond a single ad campaign, magazines go beyond a single issue, and media goes beyond digital and analogue; your story transcends its format so why shouldn't your process too?</p>
+            <h1>Product Design?</h1>
+            <p>If you're familiar with the publishing industry you might be wondering why I'm talking about product design when I work on layouts and print media too.</p>
+            <p>In my experience the modern product design process works shoulder to shoulder with print. Advertising goes beyond a single ad campaign, magazines go beyond a single issue, and media goes beyond digital and analogue; your story transcends its format so why shouldn't your process too?</p>
         </div>
         <div class="gridMargin"></div>
         <div class="">
