[Full Site] Link, Copyright, and Copy update
Separated links from parent domain. Corrected copy and copyright dates.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <body id="body">
     <div class="navBar">
         <header>
-        <a href="https://www.bymichaelmarshall.com/">
+        <a href="https://design.bymichaelmarshall.com/">
             <div class="homeIcon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="17.195" height="16.25" viewBox="0 0 17.195 16.25"><path class="homeIconSVGPath" d="M14.207-2338.121H4.245a1.519,1.519,0,0,1-1.519-1.519v-4.762a1.52,1.52,0,0,1-1.652-.331,1.519,1.519,0,0,1,0-2.148l7.044-7.044a1.515,1.515,0,0,1,1.108-.444,1.515,1.515,0,0,1,1.108.444l7.044,7.044a1.519,1.519,0,0,1,0,2.148,1.52,1.52,0,0,1-1.652.331v4.762a1.519,1.519,0,0,1-1.519,1.519Zm-4.98-12.615h0Z" transform="translate(-0.629 2354.371)"/></svg>
             </div>
@@ -122,8 +122,8 @@
             <p>&ldquo;Mike was a well respected and beloved member of our team. He is a strong communicator and works well with cross-functional teams. He is able to explain technical things in simple terms, is calm under pressure and always quick to find creative solutions to challenges. I loved working with Mike and would highly recommend him.&rdquo;<br><i><span style="padding-inline-start: 2em;">- Amy Gibson, Digital Product Director, SJC.</span></i></p>
             <h2>Hard numbers</h2>
             <p><b>3 years</b> at one of Canada’s largest privately owned communications companies, St. Joseph Communications, working on web products for 13 award-winning media brands.</p>
-            <p><b>7 years</b> of product design experience in print media designing books, covers, posters, layouts, and promotional materials.</p>
-            <p><b>11 years</b> in creative industries, making things independently and in collaboration.</p>
+            <p><b>8 years</b> of product design experience in print media designing books, covers, posters, layouts, and promotional materials.</p>
+            <p><b>12 years</b> in creative industries, making things independently and in collaboration.</p>
             <h2>Me, myself, and you</h2>
             <p>It's my privilege to bring quality and expertise to the products I work on but, in my opinion, the most valuable experience I have is as an advocate and mediator. Whether I’m working with a whole department, a small team, or just you, connection is the basis of everything we make.</p>
         </div>
@@ -267,8 +267,8 @@
 </div>
 <!--/Body Content-->
     <footer class="footer">
-        <a href="https://bymichaelmarshall.com/terms">
-            <p class="admintext">©<span id="currentYear">2021</span>
+        <a href="terms">
+            <p class="admintext">©2021-<span id="currentYear">2021</span>
             </p>
         </a>
         <div class="icons">
