[Index] Placeholder Testimonial
Odd number of testimonials looks best so I've added a placeholder until I receive more work relevant ones

--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                 <h2 style="margin-block-end: -2px;">Testimon<span class="fontWarp" style="font-size: 1em;">y</span></h2>
 
                 <section class="carousel">
-                    <blockquote>
+                <blockquote>
                     <div>
                     <p>“We've actually hired an art director ... the impetus came from him to do so.”</p>
                     <cite>Wili Liberman — Editor in Chief, TEACH Magazine</cite>
@@ -568,6 +568,13 @@
                     <div>
                     <p>“I am immensely appreciative at how detailed he is, and I actually can't have imagined asking anyone else to look at this project now.”</p>
                     <cite>Britt Gillman — Author</cite>
+                    </div>
+                </blockquote>
+
+                <blockquote>
+                    <div>
+                    <p>“Looking forward to sticking this logo on a bunch of records and merch.”</p>
+                    <cite>Darcy Ibson — Musician</cite>
                     </div>
                 </blockquote>
 
