[Hotfix] [Index] IMFT Logo Spacing
Margin wasn't targeted as it's an img tag. Added padding to compensate.

--- a/index.html
+++ b/index.html
@@ -425,6 +425,10 @@
             animation: ticker-kf 40s linear infinite;
         }
 
+        .img-ticker > img {
+            padding: 0px 2em;
+        }
+
         @media only screen and (min-width: 760px) {
             /*.img-tickerContainer {
                 -webkit-mask-image: linear-gradient(to right, transparent, black -80%, black 160%, transparent);
