[Index] Testimonial Copy
Removed placeholder and added actual Salina quote

--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@
                             <p class="slider__caption">Duncan Clark — COO, Post Media</p>
                         </div>
                         <div class="slider__contents">
-                            <p class="slider__txt">“Salina says nice things. You should give him money.”</p>
+                            <p class="slider__txt">“I always turn to Mike for a problem that needs 360 thinking. He will do the research, figure it out, and check the things I don’t think about. He makes sense of the chaos.”</p>
                             <p class="slider__caption">Salina Vanderhorn — Owner, Saturday Morning Books</p>
                         </div>
                     </div>
