[Full Site] Admin Text & Jump Button Styling
Added Animation highlight to admin text and jump button (seen on Terms page)

--- a/terms.html
+++ b/terms.html
@@ -237,7 +237,7 @@
 <!--/Body Content-->
     <footer class="footer">
         <a href="terms">
-            <p class="admintext" style="color: var(--DMaccent-color)">©2021-<span id="currentYear">2021</span>
+            <p class="admintext">©2021-<span id="currentYear">2021</span>
             </p>
         </a>
         <!--<div class="icons">
